--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('./assets/astrologia.png');
+
 *{
     padding: 0;
     margin: 0;
@@ -13,8 +15,8 @@
     justify-content: center;
 }
 body{
-    background:url('src/assets/bg.jpg');
-    
+    background:url('./assets/astrologia.png') no-repeat center;
+
 }
 form{
     background-color: rgba(0, 0, 0, 0.377);
