--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,20 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Allerta&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+:root {
+   --background-cases: #122d25d0;
+   --border-inputs: #0a639e;
+   --number3: #ff7927;
+   --number4: #ffef60;
+   --white-cool: #fffbd7;
+}
+
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box;    
+    font-family: 'Allerta', sans-serif;
 }
 
 #root{
@@ -19,7 +31,7 @@ body{
     flex-direction: column;
 }
 form{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--background-cases);
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -48,22 +60,23 @@ form{
 
 
 input, select{
-    color: black;
+    color: var(--background-cases);
     font-weight: bold;
-    background-color: wheat;
+    background-color: var(--white-cool);
     width: 250px;
-    height: 32px;
+    height: 36px;
     padding: 8px;
-    border: none;
+    border: 1px solid white;
     border-radius: 5px;
 }
 
 textarea{
     margin-top: 4px;
+    color: var(--background-cases);
     width: 300px;
     height: 80px;
     font-weight: bold;
-    background-color: wheat;
+    background-color:var(--white-cool);
     padding: 8px;
     border-radius: 5px;
 
@@ -71,21 +84,34 @@ textarea{
 }
 label{
     margin-bottom: 12px;
+    color: white;
 }
 
 button{
     width: 250px;
     height: 32px;
-    background-color: white;
+    background-color: black;
+    color:var(--number4);
+    box-shadow: 0px 0px 10px 2px var(--number4);
     border: none;
+    font-weight: bold;
     border-radius: 5px;
+    transition: all 0.5s;
     align-self: center;
 }
-
+button:hover{
+    transition: all 0.5s;
+    background-color:var(--number4);
+    color: black;
+    box-shadow: 0px 0px 10px 3px black;
+    animation: tembloroso .5s infinite;
+}
 .box_information{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--background-cases);
     border-radius: 15px;
     padding: 20px;  
+    color: var(--white-cool);
+    font-family: 'Righteous', cursive;
 }
 
 .color{
@@ -93,8 +119,18 @@ button{
     height: 50px;
     border-radius: 50%;
     border: 3px solid grey;
-    justify-self: center;
+    justify-self: end;
     align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.colorAdaptative{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .background1{
     background: url('./assets/astrologia.png');
@@ -117,6 +153,18 @@ button{
     }
     100%{
         transform: rotateY(0deg);
+    }
+}
+
+@keyframes tembloroso {
+    0%{
+        transform: translateX(0px);
+    }
+    50%{
+        transform: translateX(2px);
+    }
+    100%{
+        transform: translateX(0px);
     }
 }
 
