--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,8 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
+    flex-direction: column;
 }
 body{
     /* background:url('./assets/astrologia.png') no-repeat center; */
