--- a/src/index.css
+++ b/src/index.css
@@ -18,18 +18,22 @@
 }
 
 #root{
-    width: 100vw;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center; 
     flex-direction: column;
+    
 }
 body{
     /* background:url('./assets/astrologia.png') no-repeat center; */
     background-color: rgba(81, 73, 102, 0.849);
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+
+    
 }
 form{
     background-color: var(--background-cases);
@@ -51,7 +55,8 @@ form{
     flex-direction: column;
     gap: 8px;
     color: var(--white-cool);
-    font-size: 20px;
+    /* font-size: 20px; */
+    margin: 16px;
     text-align: center;
     background-color: var(--background-cases);
     border-radius: 15px;
@@ -124,6 +129,7 @@ button:hover{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: -10px;
 }
 .colorAdaptative{
     display: flex;
@@ -171,6 +177,5 @@ button:hover{
 
     .box_information{
         width: 90vw;
-        margin-top: 50vw;
     }
 }
